Fix dropdown menu visibility bug + adjust menu shadow

--- a/src/main/webapp/app/overview/course-overview.component.scss
+++ b/src/main/webapp/app/overview/course-overview.component.scss
@@ -236,7 +236,8 @@ jhi-secured-image {
 .dropdown .dropdown-content {
     position: absolute;
     z-index: 1000000;
-    right: -100px;
-    background-color: hsl(0, 0%, 95%);
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.75);
+    top: 0px;
+    border: 1px solid #d7d7d7;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
 }
